parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    ARROW
    AXIS_KEYWORD
    CONS_BOOL
    CTE_F
    CTE_I
    EQCIRCLE
    EULER_KEYWORD
    GENERAL_KEYWORD
    NOT
    OR
    PI_KEYWORD
    STANDARD_KEYWORD
    STRING
    TWO_POINTS

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> goto_main PROGRAM_KEYWORD ID SEMICOLON A
Rule 2     TYPE_S -> PARABOLA_KEYWORD
Rule 3     TYPE_S -> ELLIPSE_KEYWORD
Rule 4     TYPE_S -> HYPERBOLA_KEYWORD
Rule 5     TYPE_S -> CIRCLE_KEYWORD
Rule 6     TYPE_P -> INT_KEYWORD
Rule 7     TYPE_P -> FLOAT_KEYWORD
Rule 8     TYPE_P -> BOOL_KEYWORD
Rule 9     A -> VARS B
Rule 10    A -> B
Rule 11    B -> MODULE B
Rule 12    B -> fill_main BLOCK
Rule 13    goto_main -> <empty>
Rule 14    fill_main -> <empty>
Rule 15    VARS -> VAR_KEYWORD V
Rule 16    V -> TYPE_P C
Rule 17    V -> TYPE_S C
Rule 18    C -> ID add_variable D
Rule 19    C -> ID OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET add_variableArr D
Rule 20    C -> ID OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET add_variableArr2 D
Rule 21    add_variable -> <empty>
Rule 22    add_variableArr -> <empty>
Rule 23    add_variableArr2 -> <empty>
Rule 24    D -> COMMA C
Rule 25    D -> SEMICOLON V
Rule 26    D -> SEMICOLON termina_sym
Rule 27    termina_sym -> <empty>
Rule 28    BLOCK -> OPEN_BRACKET G
Rule 29    G -> STATEMENT G
Rule 30    G -> CLOSE_BRACKET
Rule 31    STATEMENT -> EXPRESSION_OP
Rule 32    STATEMENT -> ASSIGN
Rule 33    STATEMENT -> WRITE
Rule 34    STATEMENT -> FOR_LOOP
Rule 35    STATEMENT -> WHILE_LOOP
Rule 36    STATEMENT -> CONDITION
Rule 37    STATEMENT -> PROC_CALL
Rule 38    STATEMENT -> F_CALL
Rule 39    PROC_CALL -> PROC_KEYWORD ID modCall_paso1 modCall_paso2 OPEN_PARENTHESES V1
Rule 40    V1 -> EXP modCall_paso3 W1
Rule 41    V1 -> EXP modCall_paso3 COMMA modCall_paso4 V1
Rule 42    V1 -> W1
Rule 43    W1 -> modCall_paso5 CLOSE_PARENTHESES SEMICOLON modCall_paso6
Rule 44    ASSIGN -> ID ASSIGN0D EQUALOP EXPRESSION SEMICOLON
Rule 45    ASSIGN -> ID OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET ASSIGN1D EQUALOP EXPRESSION SEMICOLON
Rule 46    ASSIGN -> ID OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET ASSIGN2D EQUALOP EXPRESSION SEMICOLON
Rule 47    ASSIGN0D -> <empty>
Rule 48    ASSIGN1D -> <empty>
Rule 49    ASSIGN2D -> <empty>
Rule 50    EQUATION -> EQPARABOLA
Rule 51    EQUATION -> X_KEYWORD EQUATION_N1 POWER CONS_INT PLUSOP Y_KEYWORD POWER CONS_INT EQUALOP CONS_FLOAT SEMICOLON
Rule 52    EQUATION -> EQELLIPSE
Rule 53    EQUATION -> EQHYPERBOLA
Rule 54    EQUATION_N1 -> <empty>
Rule 55    FOR_LOOP -> FOR_LOOP_KEYWORD saveCount OPEN_PARENTHESES ASSIGN forJump EXPRESSION_BOOL forExpression SEMICOLON ID EQUALOP EXP pop_exp CLOSE_PARENTHESES BLOCK forBack
Rule 56    saveCount -> <empty>
Rule 57    pop_exp -> <empty>
Rule 58    forExpression -> <empty>
Rule 59    forBack -> <empty>
Rule 60    forJump -> <empty>
Rule 61    MODULE -> ID modDef_paso1 OPEN_PARENTHESES I
Rule 62    modDef_paso1 -> <empty>
Rule 63    I -> TYPE_P ID modDef_paso2 J
Rule 64    I -> TYPE_S ID modDef_paso2 J
Rule 65    modDef_paso2 -> <empty>
Rule 66    J -> COMMA I
Rule 67    J -> CLOSE_PARENTHESES modDef_paso4 modDef_paso5 modDef_paso6 BLOCK ret_glob modDef_paso7
Rule 68    J -> CLOSE_PARENTHESES modDef_paso4 VARS modDef_paso5 modDef_paso6 BLOCK ret_glob modDef_paso7
Rule 69    modDef_paso4 -> <empty>
Rule 70    modDef_paso5 -> <empty>
Rule 71    modDef_paso6 -> <empty>
Rule 72    modDef_paso7 -> <empty>
Rule 73    ret_glob -> <empty>
Rule 74    COLOR -> RED_KEYWORD
Rule 75    COLOR -> ORANGE_KEYWORD
Rule 76    COLOR -> YELLOW_KEYWORD
Rule 77    COLOR -> GREEN_KEYWORD
Rule 78    COLOR -> BLUE_KEYWORD
Rule 79    COLOR -> PURPLE_KEYWORD
Rule 80    WRITE -> PRINT
Rule 81    WRITE -> PLOT
Rule 82    PRINT -> PRINT_KEYWORD OPEN_PARENTHESES M
Rule 83    PRINT -> PRINT_KEYWORD OPEN_PARENTHESES MM
Rule 84    M -> CONS_STRING CLOSE_PARENTHESES SEMICOLON
Rule 85    MM -> EXPRESSION_OP CLOSE_PARENTHESES SEMICOLON
Rule 86    WHILE_LOOP -> WHILE_LOOP_KEYWORD OPEN_PARENTHESES EXPRESSION_BOOL CLOSE_PARENTHESES BLOCK
Rule 87    PLOT -> PLOT_KEYWORD OPEN_PARENTHESES ID COMMA COLOR CLOSE_PARENTHESES SEMICOLON
Rule 88    PLOT -> PLOT_KEYWORD OPEN_PARENTHESES ID CLOSE_PARENTHESES SEMICOLON
Rule 89    TRANSFORM -> REFLECTION_KEYWORD
Rule 90    TRANSFORM -> TRANS_KEYWORD
Rule 91    TRANSFORM -> ROTATION_KEYWORD
Rule 92    TRANSFORM -> STRETCH_KEYWORD
Rule 93    F_CALL -> ID POINT TRANSFORM OPEN_PARENTHESES EXP CLOSE_PARENTHESES SEMICOLON
Rule 94    CONDITION -> IF_STATEMENT OPEN_PARENTHESES EXPRESSION_BOOL CLOSE_PARENTHESES gotoFcond N
Rule 95    gotoFcond -> <empty>
Rule 96    N -> BLOCK ELSE_STATEMENT gotoElse BLOCK endif
Rule 97    N -> BLOCK endif
Rule 98    gotoElse -> <empty>
Rule 99    endif -> <empty>
Rule 100   EXPRESSION_OP -> EXPRESSION_BOOL
Rule 101   EXPRESSION_OP -> ATTRIBUTE_2
Rule 102   ATTR_2 -> CENTER_KEYWORD
Rule 103   ATTR_2 -> FOCUS_KEYWORD
Rule 104   ATTR_2 -> VERTEX_KEYWORD
Rule 105   EXPRESSION_BOOL -> EXPRESSION paso2bool BBB
Rule 106   EXPRESSION_BOOL -> EXPRESSION paso2bool
Rule 107   EXPRESSION_BOOL -> NOT_KEYWORD paso1bool EXPRESSION_BOOL pasoNotBool
Rule 108   EXPRESSION_BOOL -> NOT_KEYWORD paso1bool EXPRESSION_BOOL pasoNotBool BBB
Rule 109   BBB -> AND_KEYWORD paso1bool EXPRESSION_BOOL
Rule 110   BBB -> OR_KEYWORD paso1bool EXPRESSION_BOOL
Rule 111   paso1bool -> <empty>
Rule 112   paso2bool -> <empty>
Rule 113   pasoNotBool -> <empty>
Rule 114   EXPRESSION -> EXP RELOP paso8 EXP paso9
Rule 115   EXPRESSION -> EXP
Rule 116   paso8 -> <empty>
Rule 117   paso9 -> <empty>
Rule 118   EXP -> TERM paso4 P
Rule 119   EXP -> TERM paso4
Rule 120   paso4 -> <empty>
Rule 121   P -> PLUSOP paso2a EXP
Rule 122   P -> MINUSOP paso2b EXP
Rule 123   paso2a -> <empty>
Rule 124   paso2b -> <empty>
Rule 125   TERM -> FACTOR paso5 Q
Rule 126   TERM -> FACTOR paso5
Rule 127   paso5 -> <empty>
Rule 128   Q -> TIMESOP paso3a TERM
Rule 129   Q -> DIVIDEOP paso3b TERM
Rule 130   paso3a -> <empty>
Rule 131   paso3b -> <empty>
Rule 132   ATTR -> AREA_KEYWORD
Rule 133   ATTR -> PERIMETER_KEYWORD
Rule 134   ATTR -> EXC_KEYWORD
Rule 135   ATTR -> RADIUS_KEYWORD
Rule 136   FACTOR -> OPEN_PARENTHESES paso6 EXPRESSION_BOOL CLOSE_PARENTHESES paso7
Rule 137   FACTOR -> VAR_CONS
Rule 138   FACTOR -> ATTRIBUTE
Rule 139   paso6 -> <empty>
Rule 140   paso7 -> <empty>
Rule 141   ATTRIBUTE -> ID POINT ATTR
Rule 142   ATTRIBUTE_2 -> ID POINT ATTR_2
Rule 143   VAR_CONS -> ID paso1a
Rule 144   VAR_CONS -> ID S
Rule 145   VAR_CONS -> CONS_INT paso1b
Rule 146   VAR_CONS -> CONS_FLOAT paso1c
Rule 147   VAR_CONS -> TRUE_KEYWORD paso1d
Rule 148   VAR_CONS -> FALSE_KEYWORD paso1d
Rule 149   paso1a -> <empty>
Rule 150   paso1b -> <empty>
Rule 151   paso1c -> <empty>
Rule 152   paso1d -> <empty>
Rule 153   S -> OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET arrCall1
Rule 154   S -> OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET
Rule 155   S -> modCall_paso1 modCall_paso2 OPEN_PARENTHESES SS
Rule 156   arrAddress -> <empty>
Rule 157   arrCall1 -> <empty>
Rule 158   SS -> EXP modCall_paso3 SSS
Rule 159   SS -> EXP modCall_paso3 COMMA modCall_paso4 SS
Rule 160   SS -> SSS
Rule 161   SSS -> modCall_paso5 CLOSE_PARENTHESES modCall_paso6
Rule 162   modCall_paso1 -> <empty>
Rule 163   modCall_paso2 -> <empty>
Rule 164   modCall_paso3 -> <empty>
Rule 165   modCall_paso4 -> <empty>
Rule 166   modCall_paso5 -> <empty>
Rule 167   modCall_paso6 -> <empty>

Terminals, with rules where they appear

AND                  : 
AND_KEYWORD          : 109
AREA_KEYWORD         : 132
ARROW                : 
AXIS_KEYWORD         : 
BLUE_KEYWORD         : 78
BOOL_KEYWORD         : 8
CENTER_KEYWORD       : 102
CIRCLE_KEYWORD       : 5
CLOSE_BRACKET        : 30
CLOSE_PARENTHESES    : 43 55 67 68 84 85 86 87 88 93 94 136 161
CLOSE_SQUARE_BRACKET : 19 20 20 45 46 46 153 154 154
COMMA                : 24 41 66 87 159
CONS_BOOL            : 
CONS_FLOAT           : 51 146
CONS_INT             : 51 51 145
CONS_STRING          : 84
CTE_F                : 
CTE_I                : 
DIVIDEOP             : 129
ELLIPSE_KEYWORD      : 3
ELSE_STATEMENT       : 96
EQCIRCLE             : 
EQELLIPSE            : 52
EQHYPERBOLA          : 53
EQPARABOLA           : 50
EQUALOP              : 44 45 46 51 55
EULER_KEYWORD        : 
EXC_KEYWORD          : 134
FALSE_KEYWORD        : 148
FLOAT_KEYWORD        : 7
FOCUS_KEYWORD        : 103
FOR_LOOP_KEYWORD     : 55
GENERAL_KEYWORD      : 
GREEN_KEYWORD        : 77
HYPERBOLA_KEYWORD    : 4
ID                   : 1 18 19 20 39 44 45 46 55 61 63 64 87 88 93 141 142 143 144
IF_STATEMENT         : 94
INT_KEYWORD          : 6
MINUSOP              : 122
NOT                  : 
NOT_KEYWORD          : 107 108
OPEN_BRACKET         : 28
OPEN_PARENTHESES     : 39 55 61 82 83 86 87 88 93 94 136 155
OPEN_SQUARE_BRACKET  : 19 20 20 45 46 46 153 154 154
OR                   : 
ORANGE_KEYWORD       : 75
OR_KEYWORD           : 110
PARABOLA_KEYWORD     : 2
PERIMETER_KEYWORD    : 133
PI_KEYWORD           : 
PLOT_KEYWORD         : 87 88
PLUSOP               : 51 121
POINT                : 93 141 142
POWER                : 51 51
PRINT_KEYWORD        : 82 83
PROC_KEYWORD         : 39
PROGRAM_KEYWORD      : 1
PURPLE_KEYWORD       : 79
RADIUS_KEYWORD       : 135
RED_KEYWORD          : 74
REFLECTION_KEYWORD   : 89
RELOP                : 114
ROTATION_KEYWORD     : 91
SEMICOLON            : 1 25 26 43 44 45 46 51 55 84 85 87 88 93
STANDARD_KEYWORD     : 
STRETCH_KEYWORD      : 92
STRING               : 
TIMESOP              : 128
TRANS_KEYWORD        : 90
TRUE_KEYWORD         : 147
TWO_POINTS           : 
VAR_KEYWORD          : 15
VERTEX_KEYWORD       : 104
WHILE_LOOP_KEYWORD   : 86
X_KEYWORD            : 51
YELLOW_KEYWORD       : 76
Y_KEYWORD            : 51
error                : 

Nonterminals, with rules where they appear

A                    : 1
ASSIGN               : 32 55
ASSIGN0D             : 44
ASSIGN1D             : 45
ASSIGN2D             : 46
ATTR                 : 141
ATTRIBUTE            : 138
ATTRIBUTE_2          : 101
ATTR_2               : 142
B                    : 9 10 11
BBB                  : 105 108
BLOCK                : 12 55 67 68 86 96 96 97
C                    : 16 17 24
COLOR                : 87
CONDITION            : 36
D                    : 18 19 20
EQUATION             : 
EQUATION_N1          : 51
EXP                  : 19 20 20 40 41 45 46 46 55 93 114 114 115 121 122 153 154 154 158 159
EXPRESSION           : 44 45 46 105 106
EXPRESSION_BOOL      : 55 86 94 100 107 108 109 110 136
EXPRESSION_OP        : 31 85
FACTOR               : 125 126
FOR_LOOP             : 34
F_CALL               : 38
G                    : 28 29
I                    : 61 66
J                    : 63 64
M                    : 82
MM                   : 83
MODULE               : 11
N                    : 94
P                    : 118
PLOT                 : 81
PRINT                : 80
PROC_CALL            : 37
PROGRAM              : 0
Q                    : 125
S                    : 144
SS                   : 155 159
SSS                  : 158 160
STATEMENT            : 29
TERM                 : 118 119 128 129
TRANSFORM            : 93
TYPE_P               : 16 63
TYPE_S               : 17 64
V                    : 15 25
V1                   : 39 41
VARS                 : 9 68
VAR_CONS             : 137
W1                   : 40 42
WHILE_LOOP           : 35
WRITE                : 33
add_variable         : 18
add_variableArr      : 19
add_variableArr2     : 20
arrAddress           : 
arrCall1             : 153
endif                : 96 97
fill_main            : 12
forBack              : 55
forExpression        : 55
forJump              : 55
gotoElse             : 96
gotoFcond            : 94
goto_main            : 1
modCall_paso1        : 39 155
modCall_paso2        : 39 155
modCall_paso3        : 40 41 158 159
modCall_paso4        : 41 159
modCall_paso5        : 43 161
modCall_paso6        : 43 161
modDef_paso1         : 61
modDef_paso2         : 63 64
modDef_paso4         : 67 68
modDef_paso5         : 67 68
modDef_paso6         : 67 68
modDef_paso7         : 67 68
paso1a               : 143
paso1b               : 145
paso1bool            : 107 108 109 110
paso1c               : 146
paso1d               : 147 148
paso2a               : 121
paso2b               : 122
paso2bool            : 105 106
paso3a               : 128
paso3b               : 129
paso4                : 118 119
paso5                : 125 126
paso6                : 136
paso7                : 136
paso8                : 114
paso9                : 114
pasoNotBool          : 107 108
pop_exp              : 55
ret_glob             : 67 68
saveCount            : 55
termina_sym          : 26

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . goto_main PROGRAM_KEYWORD ID SEMICOLON A
    (13) goto_main -> .

    PROGRAM_KEYWORD reduce using rule 13 (goto_main -> .)

    PROGRAM                        shift and go to state 1
    goto_main                      shift and go to state 2

state 1

    (0) S' -> PROGRAM .



state 2

    (1) PROGRAM -> goto_main . PROGRAM_KEYWORD ID SEMICOLON A

    PROGRAM_KEYWORD shift and go to state 3


state 3

    (1) PROGRAM -> goto_main PROGRAM_KEYWORD . ID SEMICOLON A

    ID              shift and go to state 4


state 4

    (1) PROGRAM -> goto_main PROGRAM_KEYWORD ID . SEMICOLON A

    SEMICOLON       shift and go to state 5


state 5

    (1) PROGRAM -> goto_main PROGRAM_KEYWORD ID SEMICOLON . A
    (9) A -> . VARS B
    (10) A -> . B
    (15) VARS -> . VAR_KEYWORD V
    (11) B -> . MODULE B
    (12) B -> . fill_main BLOCK
    (61) MODULE -> . ID modDef_paso1 OPEN_PARENTHESES I
    (14) fill_main -> .

    VAR_KEYWORD     shift and go to state 10
    ID              shift and go to state 6
    OPEN_BRACKET    reduce using rule 14 (fill_main -> .)

    A                              shift and go to state 7
    VARS                           shift and go to state 8
    B                              shift and go to state 9
    MODULE                         shift and go to state 11
    fill_main                      shift and go to state 12

state 6

    (61) MODULE -> ID . modDef_paso1 OPEN_PARENTHESES I
    (62) modDef_paso1 -> .

    OPEN_PARENTHESES reduce using rule 62 (modDef_paso1 -> .)

    modDef_paso1                   shift and go to state 13

state 7

    (1) PROGRAM -> goto_main PROGRAM_KEYWORD ID SEMICOLON A .

    $end            reduce using rule 1 (PROGRAM -> goto_main PROGRAM_KEYWORD ID SEMICOLON A .)


state 8

    (9) A -> VARS . B
    (11) B -> . MODULE B
    (12) B -> . fill_main BLOCK
    (61) MODULE -> . ID modDef_paso1 OPEN_PARENTHESES I
    (14) fill_main -> .

    ID              shift and go to state 6
    OPEN_BRACKET    reduce using rule 14 (fill_main -> .)

    B                              shift and go to state 14
    MODULE                         shift and go to state 11
    fill_main                      shift and go to state 12

state 9

    (10) A -> B .

    $end            reduce using rule 10 (A -> B .)


state 10

    (15) VARS -> VAR_KEYWORD . V
    (16) V -> . TYPE_P C
    (17) V -> . TYPE_S C
    (6) TYPE_P -> . INT_KEYWORD
    (7) TYPE_P -> . FLOAT_KEYWORD
    (8) TYPE_P -> . BOOL_KEYWORD
    (2) TYPE_S -> . PARABOLA_KEYWORD
    (3) TYPE_S -> . ELLIPSE_KEYWORD
    (4) TYPE_S -> . HYPERBOLA_KEYWORD
    (5) TYPE_S -> . CIRCLE_KEYWORD

    INT_KEYWORD     shift and go to state 18
    FLOAT_KEYWORD   shift and go to state 19
    BOOL_KEYWORD    shift and go to state 20
    PARABOLA_KEYWORD shift and go to state 21
    ELLIPSE_KEYWORD shift and go to state 22
    HYPERBOLA_KEYWORD shift and go to state 23
    CIRCLE_KEYWORD  shift and go to state 24

    V                              shift and go to state 15
    TYPE_P                         shift and go to state 16
    TYPE_S                         shift and go to state 17

state 11

    (11) B -> MODULE . B
    (11) B -> . MODULE B
    (12) B -> . fill_main BLOCK
    (61) MODULE -> . ID modDef_paso1 OPEN_PARENTHESES I
    (14) fill_main -> .

    ID              shift and go to state 6
    OPEN_BRACKET    reduce using rule 14 (fill_main -> .)

    MODULE                         shift and go to state 11
    B                              shift and go to state 25
    fill_main                      shift and go to state 12

state 12

    (12) B -> fill_main . BLOCK
    (28) BLOCK -> . OPEN_BRACKET G

    OPEN_BRACKET    shift and go to state 27

    BLOCK                          shift and go to state 26

state 13

    (61) MODULE -> ID modDef_paso1 . OPEN_PARENTHESES I

    OPEN_PARENTHESES shift and go to state 28


state 14

    (9) A -> VARS B .

    $end            reduce using rule 9 (A -> VARS B .)


state 15

    (15) VARS -> VAR_KEYWORD V .

    ID              reduce using rule 15 (VARS -> VAR_KEYWORD V .)
    OPEN_BRACKET    reduce using rule 15 (VARS -> VAR_KEYWORD V .)


state 16

    (16) V -> TYPE_P . C
    (18) C -> . ID add_variable D
    (19) C -> . ID OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET add_variableArr D
    (20) C -> . ID OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET add_variableArr2 D

    ID              shift and go to state 30

    C                              shift and go to state 29

state 17

    (17) V -> TYPE_S . C
    (18) C -> . ID add_variable D
    (19) C -> . ID OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET add_variableArr D
    (20) C -> . ID OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET add_variableArr2 D

    ID              shift and go to state 30

    C                              shift and go to state 31

state 18

    (6) TYPE_P -> INT_KEYWORD .

    ID              reduce using rule 6 (TYPE_P -> INT_KEYWORD .)


state 19

    (7) TYPE_P -> FLOAT_KEYWORD .

    ID              reduce using rule 7 (TYPE_P -> FLOAT_KEYWORD .)


state 20

    (8) TYPE_P -> BOOL_KEYWORD .

    ID              reduce using rule 8 (TYPE_P -> BOOL_KEYWORD .)


state 21

    (2) TYPE_S -> PARABOLA_KEYWORD .

    ID              reduce using rule 2 (TYPE_S -> PARABOLA_KEYWORD .)


state 22

    (3) TYPE_S -> ELLIPSE_KEYWORD .

    ID              reduce using rule 3 (TYPE_S -> ELLIPSE_KEYWORD .)


state 23

    (4) TYPE_S -> HYPERBOLA_KEYWORD .

    ID              reduce using rule 4 (TYPE_S -> HYPERBOLA_KEYWORD .)


state 24

    (5) TYPE_S -> CIRCLE_KEYWORD .

    ID              reduce using rule 5 (TYPE_S -> CIRCLE_KEYWORD .)


state 25

    (11) B -> MODULE B .

    $end            reduce using rule 11 (B -> MODULE B .)


state 26

    (12) B -> fill_main BLOCK .

    $end            reduce using rule 12 (B -> fill_main BLOCK .)


state 27

    (28) BLOCK -> OPEN_BRACKET . G
    (29) G -> . STATEMENT G
    (30) G -> . CLOSE_BRACKET
    (31) STATEMENT -> . EXPRESSION_OP
    (32) STATEMENT -> . ASSIGN
    (33) STATEMENT -> . WRITE
    (34) STATEMENT -> . FOR_LOOP
    (35) STATEMENT -> . WHILE_LOOP
    (36) STATEMENT -> . CONDITION
    (37) STATEMENT -> . PROC_CALL
    (38) STATEMENT -> . F_CALL
    (100) EXPRESSION_OP -> . EXPRESSION_BOOL
    (101) EXPRESSION_OP -> . ATTRIBUTE_2
    (44) ASSIGN -> . ID ASSIGN0D EQUALOP EXPRESSION SEMICOLON
    (45) ASSIGN -> . ID OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET ASSIGN1D EQUALOP EXPRESSION SEMICOLON
    (46) ASSIGN -> . ID OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET ASSIGN2D EQUALOP EXPRESSION SEMICOLON
    (80) WRITE -> . PRINT
    (81) WRITE -> . PLOT
    (55) FOR_LOOP -> . FOR_LOOP_KEYWORD saveCount OPEN_PARENTHESES ASSIGN forJump EXPRESSION_BOOL forExpression SEMICOLON ID EQUALOP EXP pop_exp CLOSE_PARENTHESES BLOCK forBack
    (86) WHILE_LOOP -> . WHILE_LOOP_KEYWORD OPEN_PARENTHESES EXPRESSION_BOOL CLOSE_PARENTHESES BLOCK
    (94) CONDITION -> . IF_STATEMENT OPEN_PARENTHESES EXPRESSION_BOOL CLOSE_PARENTHESES gotoFcond N
    (39) PROC_CALL -> . PROC_KEYWORD ID modCall_paso1 modCall_paso2 OPEN_PARENTHESES V1
    (93) F_CALL -> . ID POINT TRANSFORM OPEN_PARENTHESES EXP CLOSE_PARENTHESES SEMICOLON
    (105) EXPRESSION_BOOL -> . EXPRESSION paso2bool BBB
    (106) EXPRESSION_BOOL -> . EXPRESSION paso2bool
    (107) EXPRESSION_BOOL -> . NOT_KEYWORD paso1bool EXPRESSION_BOOL pasoNotBool
    (108) EXPRESSION_BOOL -> . NOT_KEYWORD paso1bool EXPRESSION_BOOL pasoNotBool BBB
    (142) ATTRIBUTE_2 -> . ID POINT ATTR_2
    (82) PRINT -> . PRINT_KEYWORD OPEN_PARENTHESES M
    (83) PRINT -> . PRINT_KEYWORD OPEN_PARENTHESES MM
    (87) PLOT -> . PLOT_KEYWORD OPEN_PARENTHESES ID COMMA COLOR CLOSE_PARENTHESES SEMICOLON
    (88) PLOT -> . PLOT_KEYWORD OPEN_PARENTHESES ID CLOSE_PARENTHESES SEMICOLON
    (114) EXPRESSION -> . EXP RELOP paso8 EXP paso9
    (115) EXPRESSION -> . EXP
    (118) EXP -> . TERM paso4 P
    (119) EXP -> . TERM paso4
    (125) TERM -> . FACTOR paso5 Q
    (126) TERM -> . FACTOR paso5
    (136) FACTOR -> . OPEN_PARENTHESES paso6 EXPRESSION_BOOL CLOSE_PARENTHESES paso7
    (137) FACTOR -> . VAR_CONS
    (138) FACTOR -> . ATTRIBUTE
    (143) VAR_CONS -> . ID paso1a
    (144) VAR_CONS -> . ID S
    (145) VAR_CONS -> . CONS_INT paso1b
    (146) VAR_CONS -> . CONS_FLOAT paso1c
    (147) VAR_CONS -> . TRUE_KEYWORD paso1d
    (148) VAR_CONS -> . FALSE_KEYWORD paso1d
    (141) ATTRIBUTE -> . ID POINT ATTR

    CLOSE_BRACKET   shift and go to state 34
    ID              shift and go to state 45
    FOR_LOOP_KEYWORD shift and go to state 50
    WHILE_LOOP_KEYWORD shift and go to state 52
    IF_STATEMENT    shift and go to state 53
    PROC_KEYWORD    shift and go to state 54
    NOT_KEYWORD     shift and go to state 55
    PRINT_KEYWORD   shift and go to state 56
    PLOT_KEYWORD    shift and go to state 57
    OPEN_PARENTHESES shift and go to state 51
    CONS_INT        shift and go to state 62
    CONS_FLOAT      shift and go to state 63
    TRUE_KEYWORD    shift and go to state 64
    FALSE_KEYWORD   shift and go to state 65

    G                              shift and go to state 32
    STATEMENT                      shift and go to state 33
    EXPRESSION_OP                  shift and go to state 35
    ASSIGN                         shift and go to state 36
    WRITE                          shift and go to state 37
    FOR_LOOP                       shift and go to state 38
    WHILE_LOOP                     shift and go to state 39
    CONDITION                      shift and go to state 40
    PROC_CALL                      shift and go to state 41
    F_CALL                         shift and go to state 42
    EXPRESSION_BOOL                shift and go to state 43
    ATTRIBUTE_2                    shift and go to state 44
    EXPRESSION                     shift and go to state 46
    EXP                            shift and go to state 47
    PRINT                          shift and go to state 48
    PLOT                           shift and go to state 49
    TERM                           shift and go to state 58
    FACTOR                         shift and go to state 59
    VAR_CONS                       shift and go to state 60
    ATTRIBUTE                      shift and go to state 61

state 28

    (61) MODULE -> ID modDef_paso1 OPEN_PARENTHESES . I
    (63) I -> . TYPE_P ID modDef_paso2 J
    (64) I -> . TYPE_S ID modDef_paso2 J
    (6) TYPE_P -> . INT_KEYWORD
    (7) TYPE_P -> . FLOAT_KEYWORD
    (8) TYPE_P -> . BOOL_KEYWORD
    (2) TYPE_S -> . PARABOLA_KEYWORD
    (3) TYPE_S -> . ELLIPSE_KEYWORD
    (4) TYPE_S -> . HYPERBOLA_KEYWORD
    (5) TYPE_S -> . CIRCLE_KEYWORD

    INT_KEYWORD     shift and go to state 18
    FLOAT_KEYWORD   shift and go to state 19
    BOOL_KEYWORD    shift and go to state 20
    PARABOLA_KEYWORD shift and go to state 21
    ELLIPSE_KEYWORD shift and go to state 22
    HYPERBOLA_KEYWORD shift and go to state 23
    CIRCLE_KEYWORD  shift and go to state 24

    I                              shift and go to state 66
    TYPE_P                         shift and go to state 67
    TYPE_S                         shift and go to state 68

state 29

    (16) V -> TYPE_P C .

    ID              reduce using rule 16 (V -> TYPE_P C .)
    OPEN_BRACKET    reduce using rule 16 (V -> TYPE_P C .)


state 30

    (18) C -> ID . add_variable D
    (19) C -> ID . OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET add_variableArr D
    (20) C -> ID . OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET add_variableArr2 D
    (21) add_variable -> .

    OPEN_SQUARE_BRACKET shift and go to state 70
    COMMA           reduce using rule 21 (add_variable -> .)
    SEMICOLON       reduce using rule 21 (add_variable -> .)

    add_variable                   shift and go to state 69

state 31

    (17) V -> TYPE_S C .

    ID              reduce using rule 17 (V -> TYPE_S C .)
    OPEN_BRACKET    reduce using rule 17 (V -> TYPE_S C .)


state 32

    (28) BLOCK -> OPEN_BRACKET G .
